<resources>
    <string name="app_name">Estationery</string>
    <string name="home">Home</string>
    <string name="promo">Promo</string>
    <string name="purchase_order">purchase order</string>
    <string name="order_history">order history</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_history_fragment">order history_ ragment</string>
    <string name="order_fragment">order fragment</string>
    <string name="promo_fragment">promo fragment</string>
    <string name="profile_fragment">profile fragment</string>
    <string name="delivery_to">Delivery to</string>
    <string name="darshan_tramba">Darshan, Tramba</string>
    <string name="account_detail_home">Account</string>
    <string name="price">₹ 150 for all set</string>
    <string name="rate">4.5</string>
    <string name="st_address">Mahuva, India</string>
    <string name="st_name">Ashopalav Stationery</string>
    <string name="st_around">All Stationery around you</string>
    <string name="get_started">The Right Address For Shopping Anyday</string>
    <string name="btn_get_start">Get Start</string>
    <string name="email">Email</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login_btn">Login</string>
    <string name="password_login">Password</string>
    <string name="login_txt1">India’s #1 E-Stationery Delivery App</string>
    <string name="login_txt3">or</string>
    <string name="login_txt4">By continiuing, you agree to our</string>
    <string name="login_txt5">Terms of Service, Privacy Policy, Content policy</string>
    <string name="login_txt2">Log in or Sign in</string>
    <string name="email_login">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_editTxt">Email</string>
    <string name="mobile_no">Mobile No</string>
    <string name="already_have_an_account_login">Already Have an account ? Login</string>
    <string name="register_now">Register Now</string>
    <string name="pen_price">$3, per pen</string>
    <string name="softek_blue_pen">Softek blue pen</string>
    <string name="softek_pen">Softek Pen</string>
    <string name="softek_pen_price">$30 for box</string>
    <string name="favorite_order">Favorite order</string>
    <string name="view_activity">View activity</string>
    <string name="darshan">Darshan</string>
    <string name="stationery_order">Stationery order</string>
    <string name="your_order">Your Order</string>
    <string name="payments">Payments</string>
    <string name="choose_language">Choose language</string>
    <string name="logout">Logout</string>
    <string name="sign_in">Sign in</string>
    <string name="hint_first_name">First Name</string>
    <string name="address">Address</string>
    <string name="shanghai_hero_pens">Shanghai Hero Pens</string>
    <string name="_60_per_pen">$60, per pen</string>
    <string name="free">Free</string>
    <string name="delivery">Delivery</string>
    <string name="_3_5_km">3.5 KM</string>
    <string name="distance">Distance</string>
    <string name="_4_5">4.5</string>
    <string name="_500_review">(500 + review)</string>
    <string name="pens">Pens</string>
    <string name="all_menu">All Menu</string>
    <string name="toys">Toys</string>
    <string name="eraser_shapner">Eraser/Shapner</string>
    <string name="books">Books</string>
    <string name="more">More</string>
    <string name="Profile_email">email</string>
    <string name="password">Password</string>


</resources>