<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoginScreen">

   <ImageView
       android:layout_width="match_parent"
       android:scaleType="centerCrop"
       android:layout_height="wrap_content"
       android:src="@drawable/login_img"
       android:layout_marginTop="-110dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-103dp"
        android:orientation="vertical">

        <View

            android:layout_width="155dp"
            android:layout_height="2dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="310dp"
            android:background="#E91E63" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:gravity="center"
        android:layout_marginTop="197dp"
        android:text="@string/sign_in"
        android:textColor="#8F000000"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-103dp"
        android:orientation="vertical">

        <View

            android:layout_width="190dp"
            android:layout_height="2dp"
            android:layout_marginStart="250dp"
            android:layout_marginTop="310dp"
            android:layout_marginEnd="200dp"
            android:background="#E91E63" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@id/Login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="240dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/bg"
            android:backgroundTint="@color/ebg"
            android:ems="10"
            android:hint="@string/hint_first_name"
            android:inputType="textPersonName"
            android:textColorHint="#A7A4A4"
            android:autofillHints="" />

        <EditText
            android:id="@id/Login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/bg"
            android:backgroundTint="@color/ebg"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textColorHint="#A7A4A4"
            android:importantForAutofill="no" />

        <EditText
            android:id="@id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/bg"
            android:backgroundTint="@color/ebg"
            android:ems="10"

            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColorHint="#A7A4A4" />

        <EditText
            android:id="@id/Login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/bg"
            android:backgroundTint="@color/ebg"
            android:ems="10"
            android:hint="@string/mobile_no"
            android:inputType="textPersonName"
            android:textColorHint="#A7A4A4"
            android:autofillHints="" />

        <EditText
            android:id="@id/Login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:autofillHints=""
            android:background="@drawable/bg"
            android:backgroundTint="@color/ebg"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:textColorHint="#A7A4A4"
            tools:ignore="TextContrastCheck" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/registernow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="560dp"
            android:layout_marginRight="90dp"
            android:layout_weight="1"
            android:backgroundTint="#D78B8B"
            android:gravity="center"
            android:text="@string/register_now"
            android:textColor="#050505" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="630dp"
            android:gravity="center"
            android:text="@string/already_have_an_account_login"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>



</RelativeLayout>