<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Account">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="110dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/accountprofilebg" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="45dp"
        android:src="@drawable/account" />

    <TextView
        android:id="@+id/profilename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/darshan"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="75dp"
        android:text="@string/Profile_email"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="110dp"
        android:text="@string/view_activity"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="170dp"
            android:background="@drawable/accountbg"
            android:padding="15dp"
            android:src="@drawable/like" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="170dp"
            android:background="@drawable/accountbg"
            android:padding="15dp"
            android:src="@drawable/notifications" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="86dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="170dp"
            android:background="@drawable/accountbg"
            android:padding="15dp"
            android:src="@drawable/setting" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="170dp"
            android:background="@drawable/accountbg"
            android:padding="15dp"
            android:src="@drawable/wallet" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="360dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="300dp"
            android:background="@drawable/accountlang"
            android:text="@string/choose_language"
            android:textColor="@color/black"
            android:textSize="15sp">

        </TextView>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-70dp"
            android:layout_marginTop="295dp"
            android:backgroundTint="#00FFFFFF"
            android:src="@drawable/rightarrow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="360dp"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="355dp"
            android:background="@drawable/accountlang"
            tools:ignore="Suspicious0dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="-340dp"
            android:layout_marginTop="360dp"
            android:text="@string/stationery_order"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="60dp"
            android:layout_marginTop="400dp"
            android:text="@string/your_order"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="-94dp"
            android:layout_marginTop="400dp"
            android:background="@drawable/yourordershape"
            android:src="@drawable/yourorder" />

        <View
            android:layout_width="275dp"
            android:layout_height="2dp"
            android:layout_marginTop="425dp"
            android:background="@color/black" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-70dp"
            android:layout_marginTop="380dp"
            android:backgroundTint="@color/lightblack"
            android:src="@drawable/rightarrow" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-350dp"
            android:layout_marginTop="450dp"
            android:text="@string/favorite_order"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="-125dp"
            android:layout_marginTop="450dp"
            android:background="@drawable/yourordershape"
            android:src="@drawable/like" />

        <View
            android:layout_width="270dp"
            android:layout_height="2dp"
            android:layout_marginTop="472dp"
            android:background="@color/black" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-70dp"
            android:layout_marginTop="430dp"
            android:backgroundTint="@color/lightblack"
            android:src="@drawable/rightarrow" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-350dp"
            android:layout_marginTop="490dp"
            android:text="@string/payments"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="-125dp"
            android:layout_marginTop="490dp"
            android:background="@drawable/yourordershape"
            android:src="@drawable/payments" />

        <View
            android:layout_width="270dp"
            android:layout_height="2dp"
            android:layout_marginTop="515dp"
            android:background="@color/black" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-70dp"
            android:layout_marginTop="470dp"
            android:backgroundTint="@color/lightblack"
            android:src="@drawable/rightarrow" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/logout"
            android:layout_width="360dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="600dp"
            android:background="@drawable/accountlang"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-70dp"
            android:layout_marginTop="595dp"
            android:backgroundTint="@color/lightblack"
            android:src="@drawable/rightarrow" />
    </LinearLayout>


</RelativeLayout>